--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Will You Be My Valentine?</title>
     <link rel="stylesheet" href="JAFFA%201.css">
 </head>
+    <audio id="bg-music" autoplay loop>
+  <source src="" type="audio/mpeg">
+</audio>
+
 <body>
     <div class="container">
         <h1>Will you be my Valentine?</h1>
