--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <title>Will You Be My Valentine?</title>
     <link rel="stylesheet" href="JAFFA%201.css">
 </head>
-    <audio id="bg-music" autoplay loop>
-  <source src="Fall in love again Everything is romantic TikTok Version Wuthering Heights Trailer Charli xcx.mp3" type="audio/mpeg">
-</audio>
 
 <body>
+    <!-- Background music -->
+    <audio id="bg-music" loop>
+        <source src="Fall in love again Everything is romantic TikTok Version Wuthering Heights Trailer Charli xcx.mp3" type="audio/mpeg">
+    </audio>
+
     <div class="container">
         <h1>Will you be my Valentine?</h1>
         <div class="buttons">
@@ -21,6 +23,7 @@
             <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW5lenZyZHI5OXM2eW95b3pmMG40cWVrMDhtNjVuM3A4dGNxa2g2dSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/VM1fcpu2bKs1e2Kdbj/giphy.gif" alt="Cute GIF">
         </div>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
